@startuml
'*************** Activity Classes ***************
class AddSongToPlaylistActivity {
    - log : Logger final
    - playlistDao : PlaylistDao final
    - albumTrackDao : AlbumTrackDao final
    + handleRequest(AddSongToPlaylistRequest, Context) : AddSongToPlaylistResult
}

class CreatePlaylistActivity {
    - log : Logger final
    - playlistDao : PlaylistDao
    + handleRequest(CreatePlaylistRequest, Context) : CreatePlaylistResult
}

class GetPlaylistActivity {
    - log : Logger final
    - playlistDao : PlaylistDao
    + handleRequest(GetPlaylistRequest, Context) : GetPlaylistResult final
}

class GetPlaylistSongsActivity {
    - log : Logger final
    - playlistDao : PlaylistDao
    + handleRequest(GetPlaylistSongsRequest, Context) : GetPlaylistSongsResult final
}

class UpdatePlaylistActivity {
    - log : Logger final
    - playlistDao : PlaylistDao
    + handleRequest(UpdatePlaylistRequest, Context) : UpdatePlaylistResult final
}

'*************** Exception Classes ***************
class AlbumTrackNotFoundException {
    - serialVersionUID : long static final
    + AlbumTrackNotFoundException(String)
    + AlbumTrackNotFoundException(Throwable)
    + AlbumTrackNotFoundException(String, Throwable)
}

class PlaylistNotFoundException {
    - serialVersionUID : long static final
    + PlaylistNotFoundException(String)
    + PlaylistNotFoundException(Throwable)
    + PlaylistNotFoundException(String, Throwable)
}

class InvalidAttributeValueException {
    - serialVersionUID : long static final
    + InvalidAttributeValueException(String)
    + InvalidAttributeValueException(Throwable)
    + InvalidAttributeValueException(String, Throwable)
}

class InvalidAttributeChangeException {
    - serialVersionUID : long static final
    + InvalidAttributeChangeException(String)
    + InvalidAttributeChangeException(Throwable)
    + InvalidAttributeChangeException(String, Throwable)
}

class RuntimeException {}

'*************** Dao Classes ***************
class AlbumTrackDao {
    - dynamoDbMapper : DynamoDBMapper
}

class PlaylistDao {
    - dynamoDbMapper : DynamoDBMapper
    + getPlaylist(String) : Playlist
    + savePlaylist() : Playlist
}

'*************** DynamoDB Model Classes ***************
class AlbumTrack {
    - @DynamoDBHashKey asin : String
    - @DynamoDBRangeKey trackNumber : Integer
    - albumName : String
    - songTitle : String
    + getAsin() : String
    + getTrackNumber() : int
    + getAlbumName() : String
    + getSongTitle() : String
    + setTrackNumber(int) : void
    + setAlbumName(String) : void
    + setSongTitle(String) : void
}

class Playlist {
    - @DynamoDBHashKey id : String
    - name : String
    - customerId : String
    - songCount : Integer
    - tags : Set<String>
    - songList : List<AlbumTrack>
    + getId(String) : String
    + getName(String) : String
    + getCustomerId(String) : String
    + getSongCount(Integer) : Integer
    + getTags(Set<String>) : Set<String>
    + getSongList() : List<AlbumTrack>
    + setId(String) : void
    + setName(String) : void
    + setCustomerId(String) : void
    + setSongCount(Integer) : void
    + setTags(Set<String>) : void
    + setSongList(List<AlbumTrack>) : void
}

Playlist --o AlbumTrack
AddSongToPlaylistActivity --> AlbumTrackDao
AddSongToPlaylistActivity --> PlaylistDao
CreatePlaylistActivity --> PlaylistDao
GetPlaylistActivity --> PlaylistDao
GetPlaylistSongsActivity --> PlaylistDao
UpdatePlaylistActivity --> PlaylistDao
InvalidAttributeChangeException --|> RuntimeException
InvalidAttributeValueException --|> RuntimeException
@enduml